# ADS_MCP_Server_main

./: .gitkeep
MCP_Server/ADS/: .gitignore  README.md  README.zh-CN.md  ads_runtime.py  hpeesofsim.cfg  install_addon_in_ads.py  mcp_server.py  pyproject.toml  register_codex.ps1  setup.ps1  start_mcp.bat
MCP_Server/ADS/ads_live_bridge/: __init__.py
MCP_Server/ADS/examples/: codex_config.example.toml
MCP_Server/ADS/tests/: smoke_mcp_stdio.py  test_runtime.py
